test: CI파일 gradle init 추가

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -26,6 +26,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+    - name: init Gradle
+      run: ./gradlew init
     - name: Build with Gradle # 실제 application build(-x 옵션을 통해 test는 제외)
       run: ./gradlew build -x test
     - name: Test with Gradle
