--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -18,17 +18,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
-    services:
-      mysql:
-        image: mysql:8.0.22
-        env:
-          # application.yml에서 DB를 test로 지정했었다.
-          MYSQL_DB: blog
-          MYSQL_PASSWORD: dnwo0719
-          MYSQL_USER: admin
-        ports:
-          - 3306:3306
+  
 
     steps:
     - uses: actions/checkout@v3
@@ -37,6 +27,14 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Setup MySQL
+      uses: samin/mysql-action@v1
+      with:
+        character set server: 'utf8'
+        mysql database: 'blog'
+        mysql user: 'admin'
+        mysql password: 'dnwo0719'
+          
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
     - name: init Gradle
