--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -34,6 +34,8 @@ jobs:
         spring.datasource.url: ${{ secrets.MYSQLDB_URL }} 
         spring.datasource.username: ${{ secrets.MYSQLDB_USERNAME }} 
         spring.datasource.password: ${{ secrets.MYSQLDB_PASSWORD }}
+        token.access_expiration_time: ${{ secrets.TOKEN_EXPIRED }}
+        token.secret: ${{ secret.TOKEN_KEY }}
       
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
